@@ -1,6 +1,6 @@
 /*
  * DBeaver - Universal Database Manager
- * Copyright (C) 2010-2025 DBeaver Corp and others
+ * Copyright (C) 2010-2026 DBeaver Corp and others
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,10 +22,12 @@ import org.eclipse.equinox.app.IApplicationContext;
 import org.eclipse.osgi.service.datalocation.Location;
 import org.jkiss.code.NotNull;
 import org.jkiss.code.Nullable;
+import org.jkiss.dbeaver.DBException;
 import org.jkiss.dbeaver.Log;
 import org.jkiss.dbeaver.model.DBConstants;
 import org.jkiss.dbeaver.model.app.DBPPlatform;
 import org.jkiss.dbeaver.model.cli.CLIProcessResult;
+import org.jkiss.dbeaver.model.cli.command.AbstractTopLevelCommand;
 import org.jkiss.dbeaver.model.impl.app.BaseApplicationImpl;
 import org.jkiss.dbeaver.model.impl.preferences.SimplePreferenceStore;
 import org.jkiss.dbeaver.model.preferences.DBPPreferenceStore;
@@ -34,9 +36,9 @@ import org.jkiss.dbeaver.runtime.DBWorkbench;
 import org.jkiss.dbeaver.runtime.ui.DBPPlatformUI;
 import org.jkiss.dbeaver.runtime.ui.console.ConsoleUserInterface;
 import org.jkiss.dbeaver.utils.RuntimeUtils;
+import org.jkiss.utils.ArrayUtils;
 import org.jkiss.utils.CommonUtils;
 
-import java.io.IOException;
 import java.net.URL;
 import java.nio.file.Path;
 
@@ -45,11 +47,13 @@ import java.nio.file.Path;
  */
 public class CLIApplicationBase extends BaseApplicationImpl {
     private static final Log log = Log.getLog(CLIApplicationBase.class);
-    protected final String WORKSPACE_DIR_CURRENT;
+    protected final Path WORKSPACE_DIR_CURRENT;
+    private boolean started = false;
+    private static final String[] DEFAULT_ARGS = new String[] {AbstractTopLevelCommand.HELP_OPTION};
 
     private final DBPPreferenceStore preferenceStore = new SimplePreferenceStore() {
         @Override
-        public void save() throws IOException {
+        public void save() {
 
         }
     };
@@ -68,7 +72,7 @@ public class CLIApplicationBase extends BaseApplicationImpl {
         String workingDirectory = RuntimeUtils.getWorkingDirectory(BasePlatformImpl.DBEAVER_DATA_DIR);
 
         // Workspace dir
-        WORKSPACE_DIR_CURRENT = Path.of(workingDirectory, DEFAULT_WORKSPACE_FOLDER).toAbsolutePath().toString();
+        WORKSPACE_DIR_CURRENT = Path.of(workingDirectory, DEFAULT_WORKSPACE_FOLDER);
         Log.setLogHandler(new VoidLogHandler());
     }
 
@@ -81,11 +85,7 @@ public class CLIApplicationBase extends BaseApplicationImpl {
         Location instanceLoc = Platform.getInstanceLocation();
         try {
             if (!instanceLoc.isSet()) { // always false?
-                URL wsLocationURL = new URL(
-                    "file",  //$NON-NLS-1$
-                    null,
-                    WORKSPACE_DIR_CURRENT
-                );
+                URL wsLocationURL = WORKSPACE_DIR_CURRENT.toUri().toURL();
                 instanceLoc.set(wsLocationURL, false);
             }
         } catch (Exception e) {
@@ -93,20 +93,42 @@ public class CLIApplicationBase extends BaseApplicationImpl {
             throw e;
         }
         DBWorkbench.getPlatform();
+
         configureApplication();
-        CLICommandLine commandLine = createCommandLine();
-        CLIProcessResult processResult = createCommandLine().executeCommandLineCommands(
-            null,
-            false,
-            false,
-            Platform.getApplicationArgs()
-        );
-        if (!CommonUtils.isEmpty(processResult.getOutput())) {
-            for (String res : processResult.getOutput()) {
-                System.out.println(res);
+        started = true;
+
+        try {
+            CLIProcessResult processResult = executeCommandLine(Platform.getApplicationArgs());
+            var out = processResult.getPostAction() == CLIProcessResult.PostAction.ERROR
+                ? System.err
+                : System.out;
+            if (!CommonUtils.isEmpty(processResult.getOutput())) {
+                for (String res : processResult.getOutput()) {
+                    out.println(res);
+                }
             }
+        } catch (DBException e) {
+            System.err.println("Error: " + e.getMessage());
         }
         return EXIT_OK;
+    }
+
+    public CLIProcessResult executeCommandLine(@NotNull String[] args) throws DBException {
+        CLICommandLine commandLine = createCommandLine();
+        String[] appArgs = commandLine.preprocessCommandLine(args);
+        if (ArrayUtils.isEmpty(appArgs)) {
+            appArgs = DEFAULT_ARGS;
+        }
+        try {
+            return commandLine.executeCommandLineCommands(
+                null,
+                false,
+                false,
+                appArgs
+            );
+        } catch (Exception e) {
+            throw new DBException("Error executing command line: " + e.getMessage(), e);
+        }
     }
 
     @NotNull
@@ -132,7 +154,7 @@ public class CLIApplicationBase extends BaseApplicationImpl {
     @Nullable
     @Override
     public Path getDefaultWorkingFolder() {
-        return Path.of(WORKSPACE_DIR_CURRENT);
+        return WORKSPACE_DIR_CURRENT;
     }
 
     @NotNull
@@ -158,11 +180,15 @@ public class CLIApplicationBase extends BaseApplicationImpl {
 
     @NotNull
     public DBPPreferenceStore getPreferenceStore() {
-        return preferenceStore;
+        return CLIActivator.getInstance().getPreferenceStore();
     }
 
     @NotNull
     public CLIWorkspace createWorkspace(@NotNull CLIPlatform cliPlatform) {
-        return new CLIWorkspace(cliPlatform, Path.of(WORKSPACE_DIR_CURRENT));
+        return new CLIWorkspace(cliPlatform, WORKSPACE_DIR_CURRENT);
+    }
+
+    public synchronized boolean isStarted() {
+        return started;
     }
 }
